--- a/Cristiano Ronaldo All Goals/cr7.ipynb
+++ b/Cristiano Ronaldo All Goals/cr7.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "123cd199",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "155685eb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "09dd7798",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "770f58f8",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "80356c30",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "15bd8579",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "463999a0",
    "metadata": {},
    "outputs": [],
@@ -116,8 +116,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84a74e10",
+   "metadata": {},
+   "source": [
+    "Usamos RegEx para separar marcadores, ya que no se encontró un patron en los tags para obtenerlos por separado "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "d3f2d8a0",
    "metadata": {},
    "outputs": [
@@ -133,12 +141,12 @@
     "print(len(partidos))\n",
     "re_partidos = list()\n",
     "for partido in partidos:\n",
-    "    re_partidos.append(re.split(r'(?=\\d{1,})|(?<=\\d)', partido.text_content()))"
+    "    re_partidos.append(re.split(r'(?=\\d{1,})(?<!1)|(?=[A-Za-z])(?<=\\d)', partido.text_content()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "77e0efae",
    "metadata": {},
    "outputs": [],
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "5fccb7d9",
    "metadata": {},
    "outputs": [],
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "641c1aaf",
    "metadata": {},
    "outputs": [],
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "5da8e126",
    "metadata": {},
    "outputs": [],
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "26475609",
    "metadata": {},
    "outputs": [],
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "beafb720",
    "metadata": {},
    "outputs": [],
@@ -225,12 +233,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "f87662d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "dia",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "competicion",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "visita_local",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "equipo_local",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "equipo_visitante",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "marcador_local",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "marcador_visitante",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "goles_anotados",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "asistencias",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "minutos_jugados",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "d4719471-66a0-4069-849c-98d3e4fd58c4",
+       "rows": [
+        [
+         "0",
+         "08/06/2025",
+         "Nations League",
+         "N",
+         "Portugal",
+         "Spain",
+         "2",
+         "2",
+         "1",
+         "0",
+         "88' mins played"
+        ],
+        [
+         "1",
+         "04/06/2025",
+         "Nations League",
+         "A",
+         "Germany",
+         "Portugal",
+         "1",
+         "2",
+         "1",
+         "0",
+         "89' mins played"
+        ],
+        [
+         "2",
+         "26/05/2025",
+         "Saudi Pro League",
+         "A",
+         "Al Fateh",
+         "Al Nassr",
+         "3",
+         "2",
+         "1",
+         "0",
+         "90' mins played"
+        ],
+        [
+         "3",
+         "21/05/2025",
+         "Saudi Pro League",
+         "H",
+         "Al Nassr",
+         "Al-Khaleej",
+         "2",
+         "0",
+         "1",
+         "0",
+         "90' mins played"
+        ],
+        [
+         "4",
+         "07/05/2025",
+         "Saudi Pro League",
+         "H",
+         "Al Nassr",
+         "Al-Ittihad",
+         "2",
+         "3",
+         "0",
+         "0",
+         "90' mins played"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -355,13 +494,388 @@
        "4  90' mins played  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "goles_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "794284f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "equipo_local",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "equipo_local",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "ca986137-a226-4756-958e-8d808fb5c1dc",
+       "rows": [
+        [
+         "Al Nassr",
+         "11"
+        ],
+        [
+         "Juventus",
+         "5"
+        ],
+        [
+         "Manchester United",
+         "13"
+        ],
+        [
+         "Portugal",
+         "57"
+        ],
+        [
+         "Real Madrid",
+         "13"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 5
+       }
+      },
+      "text/plain": [
+       "equipo_local\n",
+       "Al Nassr             11\n",
+       "Juventus              5\n",
+       "Manchester United    13\n",
+       "Portugal             57\n",
+       "Real Madrid          13\n",
+       "Name: equipo_local, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goles_df[goles_df['visita_local'] == 'N'].groupby('equipo_local')['equipo_local'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d8f16f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goles_df['minutos_jugados'] = goles_df['minutos_jugados'].str.extract(r'(\\d+)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4f8869eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goles_df['marcador_local'] = goles_df['marcador_local'].astype(int)\n",
+    "goles_df['marcador_visitante'] = goles_df['marcador_visitante'].astype(int)\n",
+    "goles_df['goles_anotados'] = goles_df['goles_anotados'].astype(int)\n",
+    "goles_df['asistencias'] = goles_df['asistencias'].astype(int)\n",
+    "goles_df['minutos_jugados'] = goles_df['minutos_jugados'].astype(int)\n",
+    "# goles_df['dia'] = pd.to_datetime(goles_df['dia'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "57c125ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "dia",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "competicion",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "visita_local",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "equipo_local",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "equipo_visitante",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "marcador_local",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "marcador_visitante",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "goles_anotados",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "asistencias",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "minutos_jugados",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "ac94e32f-d9ce-4475-bac3-1259eb88b06c",
+       "rows": [
+        [
+         "0",
+         "08/06/2025",
+         "Nations League",
+         "N",
+         "Portugal",
+         "Spain",
+         "2",
+         "2",
+         "1",
+         "0",
+         "88"
+        ],
+        [
+         "1",
+         "04/06/2025",
+         "Nations League",
+         "A",
+         "Germany",
+         "Portugal",
+         "1",
+         "2",
+         "1",
+         "0",
+         "89"
+        ],
+        [
+         "2",
+         "26/05/2025",
+         "Saudi Pro League",
+         "A",
+         "Al Fateh",
+         "Al Nassr",
+         "3",
+         "2",
+         "1",
+         "0",
+         "90"
+        ],
+        [
+         "3",
+         "21/05/2025",
+         "Saudi Pro League",
+         "H",
+         "Al Nassr",
+         "Al-Khaleej",
+         "2",
+         "0",
+         "1",
+         "0",
+         "90"
+        ],
+        [
+         "4",
+         "07/05/2025",
+         "Saudi Pro League",
+         "H",
+         "Al Nassr",
+         "Al-Ittihad",
+         "2",
+         "3",
+         "0",
+         "0",
+         "90"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dia</th>\n",
+       "      <th>competicion</th>\n",
+       "      <th>visita_local</th>\n",
+       "      <th>equipo_local</th>\n",
+       "      <th>equipo_visitante</th>\n",
+       "      <th>marcador_local</th>\n",
+       "      <th>marcador_visitante</th>\n",
+       "      <th>goles_anotados</th>\n",
+       "      <th>asistencias</th>\n",
+       "      <th>minutos_jugados</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08/06/2025</td>\n",
+       "      <td>Nations League</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>04/06/2025</td>\n",
+       "      <td>Nations League</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26/05/2025</td>\n",
+       "      <td>Saudi Pro League</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Al Fateh</td>\n",
+       "      <td>Al Nassr</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21/05/2025</td>\n",
+       "      <td>Saudi Pro League</td>\n",
+       "      <td>H</td>\n",
+       "      <td>Al Nassr</td>\n",
+       "      <td>Al-Khaleej</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>07/05/2025</td>\n",
+       "      <td>Saudi Pro League</td>\n",
+       "      <td>H</td>\n",
+       "      <td>Al Nassr</td>\n",
+       "      <td>Al-Ittihad</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          dia       competicion visita_local equipo_local equipo_visitante  \\\n",
+       "0  08/06/2025    Nations League            N     Portugal            Spain   \n",
+       "1  04/06/2025    Nations League            A      Germany         Portugal   \n",
+       "2  26/05/2025  Saudi Pro League            A     Al Fateh         Al Nassr   \n",
+       "3  21/05/2025  Saudi Pro League            H     Al Nassr       Al-Khaleej   \n",
+       "4  07/05/2025  Saudi Pro League            H     Al Nassr       Al-Ittihad   \n",
+       "\n",
+       "   marcador_local  marcador_visitante  goles_anotados  asistencias  \\\n",
+       "0               2                   2               1            0   \n",
+       "1               1                   2               1            0   \n",
+       "2               3                   2               1            0   \n",
+       "3               2                   0               1            0   \n",
+       "4               2                   3               0            0   \n",
+       "\n",
+       "   minutos_jugados  \n",
+       "0               88  \n",
+       "1               89  \n",
+       "2               90  \n",
+       "3               90  \n",
+       "4               90  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goles_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b158202f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goles_df.to_csv('./data/cr7Matches.csv')"
    ]
   }
  ],
